[gd_scene load_steps=2 format=3 uid="uid://dt2s0rttigswf"]

[ext_resource type="Script" path="res://scenes/shooter/shooter.gd" id="1_161yl"]

[node name="Shooter" type="Node2D"]
script = ExtResource("1_161yl")
bullet_key = 2

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
